# ActIntegradora2

./: CMakeCache.txt  CMakeLists.txt  README.md
.github/workflows/: ci.yml
include/: ford_fulkerson.h  kruskal.h  linear_search.h  tsp.h
src/: ford_fulkerson.cpp  kruskal.cpp  linear_search.cpp  main.cpp  tsp.cpp
tests/: test_ford_fulkerson.cpp  test_kruskal.cpp  test_linear_search.cpp  test_tsp.cpp
